_css/franklin.css
/* ... */
.franklin-content .color-strip-blue {
    width: 2em;
    height: inherit;
    background-color: #CBFCFF;
    margin-right: -4em;
}

.franklin-content .color-strip-orange {
    width: 2em;
    height: inherit;
    background-color: #FFE3CB;
    margin-right: -4em;
}

@media(max-width: 550px) {
    .franklin-content .color-strip-green {
        height: 2em;
        width: inherit;
        background-color: #EAFFCB;
        margin: 0 0 -2em 0;
    }

    .franklin-content .color-strip-blue {
        height: 2em;
        width: inherit;
        background-color: #CBFCFF;
        margin: 0 0 -2em 0;
    }

    .franklin-content .color-strip-orange {
        height: 2em;
        width: inherit;
        background-color: #FFE3CB;
        margin: 0 0 -2em 0;
    }

}

/* ==================================================================
    KATEX
================================================================== */

body { counter-reset: eqnum; margin: 0;}

.katex { font-size: 1em !important; }

.katex-display .katex {
  /* Overwrite KaTeX settings. */
  display: inline-block;

  /* Allow display equations to wrap on small screens. */
  white-space: normal;
}

.katex-display::after {
  counter-increment: eqnum;
  content: "(" counter(eqnum) ")";
  position: relative;
  float: right;
  padding-right: 5px;
}

/* ==================================================================
    CODE & HIGHLIGHT.JS
================================================================== */

code {
  background-color: var(--block-background);
  padding: 0.1em 0.2em;
  border-radius: 2px;
  font-size: var(--small);
}

/* .franklin-content code { */

/* background-color: rgba(27,31,35,0.05); */

/* padding: 0.1em 0.2em; */

/* border-radius: 2px; */

/* font-size: 90%; } */

.hljs {
  font-size: var(--small);
  line-height: 1.35em;
  border-radius: 10px;
}

.hljs-meta,
.hljs-metas,
.hljs-metap { font-weight: bold; }

.hljs-meta { color: rgb(25, 179, 51); }

.hljs-metas { color: red; }

.hljs-metap { color: rgb(51, 131, 231); }

.code-output {
  background: var(--output-background);
  border: 1px dashed #dbdbdb;
}

/* ==================================================================
    BOXES
================================================================== */

.franklin-content .colbox-blue {
  background-color: #eef3f5;
  padding-top: 5px;
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 5px;
  margin-left: 5px;
  margin-top: 5px;
  margin-bottom: 5px;
  border-radius: 0 10px 10px 0;
  border-left: 5px solid #4c9cf1;
}

/* ==================================================================
    TEAMCARDS
================================================================== */

.teamcard-wrapper {
    display: block;
    margin: 3em auto 0 auto;
    width: 100%;
    position: relative;
}

.teamcard-column-wrapper {
    position: relative;
    margin: 4em 3em 4em 0;
}

@media (max-width: 1130px) {
    .teamcard-column-wrapper {
        margin: 4em 2em 4em 2em;
    }
}

.teamcard-container {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: auto auto;
    gap: 1em 1em;
    background-color: lightgrey;
    padding: 1em;
    position: relative;
    z-index: 2;
}

@media(max-width: 550px) {
    .teamcard-container {
        display: flex;
        flex-direction: column;
    }
}

.teamcard-image {
    grid-row: 1 / span 2;
    align-self: center;
}

.teamcard-box {
    background-color: #cbfcff;
    width: 80%;
    height: 120%;
    top: -10%;
    right: 10%;
    position: absolute;
    z-index: 1;
}

.teamcard-image img{
    width: 230px;
    padding: 0;
    border-radius: 50%;
    float: right;
}

.teamcard-info {
    margin: auto 0 auto 0;
}

.teamcard-info .title{
    font-size: 0.7em;
}

.teamcard-info .hobbys{
    padding-top: 0.3em;
}

.teamcard-email{
    font-size: 0.7em;
}


/* ==================================================================
    TITLES AND TABLES
================================================================== */

h1 { font-size: 2.5em;  margin: 1em 0 0 0;}
h2 { font-size: 1.5em; margin: 0;}
h3 { font-size: 1em; margin: 0}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-align: left;
  color: black !important;
}

h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover,
h5 a:hover,
h6 a:hover{
    text-decoration: none !important;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a{
    color: black;
}

.franklin-content table {
  margin-left: auto;
  margin-right: auto;
  border-collapse: collapse;
  text-align: center;
}

.franklin-toc ol ol {
  list-style-type: lower-alpha;
}

.franklin-content th,
td {
  font-size: var(--small);
  padding: 10px;
  border: 1px solid black;
}

.franklin-content blockquote {
  background: var(--block-background);
  border-left: 7px solid #a8a8a8;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  font-style: italic;
}

.franklin-content blockquote p {
  display: inline;
}

.franklin-content .impressum-table td {
    border: 0;
    vertical-align: top;
    padding-left: 0;
    padding-right: 6em;

}

.franklin-content .impressum-table {
    margin-top: 0em;
}

/* ==================================================================
    TOC PAGES
================================================================== */

.franklin-content .toc-wrapper {
    width: 100%;
    display: grid;
    grid-template-columns: auto auto auto;

    margin-top: 3em;
    gap: 1em 1em;
}

.franklin-content .toc-item {
    min-height: 8em;
    border-left: solid 5px #56a4a8;
    margin-left: -5px;
    padding: 0 0.5em;
    transition: 0.2s;
}

.franklin-content .toc-item:hover {
    border-left: solid 12px #CBFCFF;
    margin-left: -12px;
}

